--- a/programming-tool/package.json
+++ b/programming-tool/package.json
@@ -14,8 +14,9 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0"
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^5.0.0"
   },
   "keywords": [],
   "description": ""
